# plotforge

./: .gitignore  CLAUDE.md  PLAN.md  README.md  README_DEV.md  pyproject.toml  requirements.txt  run.py  tool_structure.md
.claude/: settings.local.json
plotforge/: __init__.py  app.py  compose.py  config.py  figure.py
plotforge/assets/: custom.css
plotforge/callbacks/: __init__.py  compose_callbacks.py  data_callbacks.py  export_callbacks.py  layer_callbacks.py  plot_callbacks.py  style_callbacks.py
plotforge/data/: __init__.py  loader.py  sample.py  store.py
plotforge/plots/: __init__.py  area.py  bar.py  base.py  box.py  density.py  ecdf.py  errorbar.py  heatmap.py  histogram.py  line.py  overlay.py  pie.py  registry.py  scatter.py  strip.py  violin.py
plotforge/styling/: __init__.py  apply.py  style_model.py
plotforge/ui/: __init__.py  controls_compose.py  controls_data.py  controls_export.py  controls_layers.py  controls_mapping.py  controls_style.py  layout.py
tests/: conftest.py  test_compose.py  test_export.py  test_loader.py  test_overlay.py  test_plots.py  test_registry.py  test_store.py  test_style.py
tests/fixtures/: make_fixtures.py  malformed.csv  sample.csv  sample.tsv  sample.xlsx
